test/src/e2e_vm_tests/test_programs/should_pass/language/basic_predicate/src/main.sw
predicate;

fn main() -> bool {
    true
}
