test/src/e2e_vm_tests/test_programs/should_fail/dep_annotated/src/baz.sw
library foo;

fn foo() -> bool { true }

